# keystroke-biometrics

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg.json
Config/: app-config.cpp  app-config.h  config-manager.cpp  config-manager.h  config.cpp  config.h
Logger/: logger.cpp  logger.h
Utils/: utils.cpp  utils.h
WootingSDK/: key-logger.cpp  key-logger.h
config/: app-config.cpp  app-config.h  calc-config.cpp  calc-config.h  config-manager.cpp  config-manager.h  language-config.cpp  language-config.h  logger-config.cpp  logger-config.h
database/: database.cpp  database.h
database/containers/: calc-key-hit-container.cpp  calc-key-hit-container.h  calc-ngraph-container.cpp  calc-ngraph-container.h  container.h  key-hit-container.cpp  key-hit-container.h  merged-objects-container.cpp  merged-objects-container.h  ngraph-container.cpp  ngraph-container.h
database/models/: calc-key-hit.cpp  calc-key-hit.h  calc-ngraph.cpp  calc-ngraph.h  calc-template.h  key-buffer.h  key-hit.cpp  key-hit.h  ngraph.cpp  ngraph.h  statistics.h
database/templates/: template-container.cpp  template-container.h
execute/: execute.cpp  execute.h
execute/logger/: execute-logger.cpp  execute-logger.h
languages/en/: digraph.txt  trigraph.txt
languages/pl/: digraph.txt  special.txt  trigraph.txt
libs/: libfftw3-3.lib  libfftw3f-3.lib  libfftw3l-3.lib  wooting_analog_sdk.lib  wooting_analog_wrapper.lib
logger/: logger.cpp  logger.h
models/: key-buffer.h  language.cpp  language.h
optimizer/: particle-fitness.h  particle-weights.h  particle.cpp  particle.h  swarm.cpp  swarm.h
utils/biometric_template/: key-hit-type-hash.h  key_hit_type_hash.h  utils-template.cpp  utils-template.h
utils/calc/: utils-calc.cpp  utils-calc.h
utils/error_handling/: utils-error.h
utils/key/: utils-key.cpp  utils-key.h
utils/key/validators/: utils-key-validators.cpp  utils-key-validators.h
utils/math/: utils-math.cpp  utils-math.h
utils/optimizer/: utils-optimizer.cpp  utils-optimizer.h
utils/time/: utils-time.cpp  utils-time.h
wooting_sdk/: key-logger.cpp  key-logger.h
